# monopoly4u-game

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 039ee6d7c7fd_add_username_for_rooms_users_table.py  142103f8aa3d_.py  162a17ad0513_add_username_for_rooms_users_table.py  35ac347bcfcc_.py  60f1c092a0e0_.py  7fd2c577ad43_.py  86aa2b537449_.py  a527ab7d0ece_.py  d704491807ea_.py  eb48a6ad3a24_.py
docker/: app.sh
src/: config.py  main.py
src/database/: db_helper.py
src/database/models/: __init__.py  rooms.py  rooms_users.py
src/game/: __init__.py  board.py  board_manager.py  dice.py  field_action.py  fields_builder.py  player.py  schemas.py  todo
src/game/fields/: AbstractField.py  CommonField.py  SellingField.py  __init__.py  abstract_field.py  chance_field.py  common_field.py  go_to_jail_field.py  jackpot_field.py  jail_field.py  selling_field.py  special_field.py  start_field.py  tax_field.py
src/game/groups/: AbstractGroup.py  __init__.py  abstract_group.py  common_group.py  special_group.py
src/game/yaml/: fields.yml  groups.yml
src/game/yamls/: fields.yml  groups.yml
src/rooms/: routes.py  schemas.py  services.py
src/rooms_users/: services.py
