[tool.poetry]
name = "monopoly4u-game"
version = "0.1.0"
description = ""
authors = ["juhc <chalkov2002@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
